--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,80 @@
 </head>
 <body>
   <div class="promo">
-    
+    <div class="container">
+      <header class="header">
+        <a href="#" class="header__logo">
+        <img src="./icons/running-man-2-64.png" alt="logo">
+        </a>
+        <div class="header__official">
+        Официальный представитель
+        <span>Garmin, Polar, Suunto</span>
+        </div>
+        <div class="header__contacts">
+        <a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
+        <button class="button button__header">Заказать звонок</button>
+        </div>
+      </header>
+
+    <div class="promo__wrapper">
+        <h1 class="promo__header">Подбор пульсометра</h1>
+        <h2 class="promo__subheader">с учётом Вашего уровня подготовки</h2>
+      <div class="promo__icons">
+        <div class="promo__icon">
+        <img src="./icons/019_timer_time_stopwatch_2-64.png" alt="timer">
+        Время подбора: 10 минут
+        </div>
+        <div class="promo__icon">
+        <img src="./icons/app-08-hand-cart-64.png" alt="app">
+        Бесплатная доставка
+        </div>
+        <div class="promo__icon">
+        <img src="./icons/messages-64.png" alt="message">
+        Ответим на все вопросы
+        </div>
+      </div>
+
+      <div class="catalog">
+        <button class="button button_main">заказать консультацию</button>
+        <button class="button button_main xs-visible">Перейти в каталог</button>
+
+        <div class="promo__link xs-hidden">
+        или
+        <a href="#">перейти в каталог</a>
+        </div>
+      </div>
+      
+    </div>
+    </div>
   </div>
+
+<section class="advantages">
+  <div class="container">
+    <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
+
+    <div class="advantages__wrapper">
+      <div class="advantages__item">
+        <img src="./icons/seclist/cup.png" alt="" class="advantages__icon">
+        <div class="advantages__subtitle">Делимся опытом</div>
+        <div class="advantages__descr">Наши сотрудники всегда готовы поделиться своим опытом, 
+          так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
+      </div>
+      <div class="advantages__item">
+        <img src="./icons/seclist/heart.png" alt="" class="advantages__icon">
+        <div class="advantages__subtitle">Заботимся о здоровье</div>
+        <div class="advantages__descr">Мы работаем для того, 
+          чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!
+          </div>
+      </div>
+      <div class="advantages__item">
+        <img src="./icons/seclist/shoe.png" alt="" class="advantages__icon">
+        <div class="advantages__subtitle">Учим бегать</div>
+        <div class="advantages__descr">Помогаем с обучением <br> правильной технике бега! <br> Дружим с крупнейшей школой бега в России - <a href="#" >I LOVE RUNNING.</a>
+          </div>
+      </div>
+  </div>
+</div>
+</section>
+
 </body>
 </html>
