--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
   <div class="promo">
+    <div class="logo__background "></div>
     <div class="container">
       <header class="header">
         <a href="#" class="header__logo">
@@ -79,7 +80,7 @@
       <div class="advantages__item">
         <img src="./icons/seclist/shoe.png" alt="" class="advantages__icon">
         <div class="advantages__subtitle">Учим бегать</div>
-        <div class="advantages__descr">Помогаем с обучением <br> правильной технике бега! <br> Дружим с крупнейшей школой бега в России - <a href="#" >I LOVE RUNNING.</a>
+        <div class="advantages__descr">Помогаем с обучением  правильной технике бега! Дружим с крупнейшей школой бега в России - <a href="#" >I LOVE RUNNING.</a>
           </div>
       </div>
   </div>
