--- a/src/index.html
+++ b/src/index.html
@@ -87,5 +87,18 @@
 </div>
 </section>
 
+  <div class="consultation">
+    <div class="containerпше ">
+      <h2 class="title title_left">
+        Получите бесплатную консультацию <br> по подбору пульсометра
+      </h2>
+
+      <div class="consultation__descr">
+        Просто заполните форму заявки <br>
+        и мы перезвоним через 15 минут
+      </div>
+    </div>
+  </div>
+
 </body>
 </html>
