--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@
 </section>
 
   <div class="consultation">
-    <div class="containerпше ">
+    <div class="container">
       <h2 class="title title_left">
         Получите бесплатную консультацию <br> по подбору пульсометра
       </h2>
@@ -97,6 +97,9 @@
         Просто заполните форму заявки <br>
         и мы перезвоним через 15 минут
       </div>
+      <form action="#">
+        <input type="text">
+      </form>
     </div>
   </div>
 
