--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <title>Pulse</title>
   <link rel="stylesheet" href="css/libs/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="css/fonst.css">
+  <link rel="stylesheet" href="css/slick.css">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -87,7 +88,7 @@
 </div>
 </section>
 
-  <div class="consultation">
+  <section class="consultation">
     <div class="container">
       <h2 class="title title_left">
         Получите бесплатную консультацию <br> по подбору пульсометра
@@ -97,11 +98,30 @@
         Просто заполните форму заявки <br>
         и мы перезвоним через 15 минут
       </div>
-      <form action="#">
-        <input type="text">
+      <form action="#" class="feed-form">
+        <input name="name" required placeholder="Ваше имя" type="text">
+        <input name="phone" required placeholder="Ваш телефон" type="number">
+        <input name="email" required placeholder="Ваш e-mail" type="email">
+        <button class="button button_submit">Заказать консультацию</button>
       </form>
     </div>
-  </div>
+  </section>
 
+  <section class="carousel">
+    <div class="container">
+      <div class="carousel__inner">
+        <div><img src="./img/slider/1.png" alt=""></div>
+        <div><img src="./img/slider/2.png" alt=""></div>
+        <div><img src="./img/slider/3.png" alt=""></div>
+      </div>
+    </div>
+   
+
+  </section>
+  
+  <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script src="js/slick.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
