--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <title>Pulse</title>
   <link rel="stylesheet" href="css/libs/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="css/fonst.css">
-  <link rel="stylesheet" href="css/slick.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -110,18 +110,53 @@
   <section class="carousel">
     <div class="container">
       <div class="carousel__inner">
-        <div><img src="./img/slider/1.png" alt=""></div>
+        <div><a href="https://vk.com/e.kort" target="_blank"><img src="./img/slider/1.png"  alt=""></a></div>
         <div><img src="./img/slider/2.png" alt=""></div>
         <div><img src="./img/slider/3.png" alt=""></div>
       </div>
+      <button type="button" class="prev xs-hidden"><img src="img/slider/left.png"></button>
+      <button type="button" class="next xs-hidden"><img src="img/slider/right.png"></button>
     </div>
-   
-
   </section>
   
-  <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-  <script src="js/slick.min.js"></script>
+  <section class="catalog">
+    <div class="container">
+      <h2 class="title">Каталог пульсометров</h2>
+      <ul class="catalog__tabs">
+        <li class="catalog__tab catalog__tab_active"><div>Для фитнеса</div></li>
+        <li class="catalog__tab"><div>для бега</div></li>
+        <li class="catalog__tab"><div>для триатлона</div></li>
+      </ul>
+
+      <div class="catalog__content">
+        <div class="catalog-item">
+          <div class="catalog-item__wrapper">
+            <div class="catalog-item__content">
+              <img src="./img/slider/puls.png" alt="pulsometr" class="catalog-item__img">
+              <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+              <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+              <a href="#" class="catalog-item__link ">Подробнее</a>
+            </div>
+            <div class="catalog-item__list catalog-item__list_active">
+              Hello World
+            </div>
+          </div>
+          <hr>
+          <div class="catalog-item__footer">
+            <div class="catalog-item__prices">  
+              <div class="catalog-item__old-price">4 750 руб.</div>
+              <div class="catalog-item__price">4 500 руб.</div>
+            </div>
+            <button class="button button_catalog">Купить</button>
+          </div>
+        </div>
+      </div>
+      <div class="catalog__content"></div>
+      <div class="catalog__content"></div>
+    </div>
+  </section>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
   <script src="js/script.js"></script>
 </body>
 </html>
