--- a/src/index.html
+++ b/src/index.html
@@ -128,18 +128,147 @@
         <li class="catalog__tab"><div>для триатлона</div></li>
       </ul>
 
-      <div class="catalog__content">
+      <div class="catalog__content catalog__content_active">
         <div class="catalog-item">
           <div class="catalog-item__wrapper">
-            <div class="catalog-item__content">
+            <div class="catalog-item__content catalog-item__content_active">
               <img src="./img/slider/puls.png" alt="pulsometr" class="catalog-item__img">
               <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
               <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
-              <a href="#" class="catalog-item__link ">Подробнее</a>
+              <a href="#" class="catalog-item__link">Подробнее</a>
             </div>
-            <div class="catalog-item__list catalog-item__list_active">
-              Hello World
+            <ul class="catalog-item__list">
+              <li class="catalog-item__list_item">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+              <li class="catalog-item__list_item">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+              <li class="catalog-item__list_item">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+              <li class="catalog-item__list_item">Вы сможете посмотреть данные по 10 тренировкам.</li>
+              <a href="#" class="catalog-item__back">Назад</a>
+            </ul>
+          </div>
+          <hr>
+          <div class="catalog-item__footer">
+            <div class="catalog-item__prices">  
+              <div class="catalog-item__old-price">4 750 руб.</div>
+              <div class="catalog-item__price">4 500 руб.</div>
             </div>
+            <button class="button button_catalog">Купить</button>
+          </div>
+        </div>
+        <div class="catalog-item">
+          <div class="catalog-item__wrapper">
+            <div class="catalog-item__content catalog-item__content_active">
+              <img src="./img/slider/puls.png" alt="pulsometr" class="catalog-item__img">
+              <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+              <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+              <a href="#" class="catalog-item__link">Подробнее</a>
+            </div>
+            <ul class="catalog-item__list">
+              <li class="catalog-item__list_item">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+              <li class="catalog-item__list_item">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+              <li class="catalog-item__list_item">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+              <li class="catalog-item__list_item">Вы сможете посмотреть данные по 10 тренировкам.</li>
+              <a href="#" class="catalog-item__back">Назад</a>
+            </ul>
+          </div>
+          <hr>
+          <div class="catalog-item__footer">
+            <div class="catalog-item__prices">  
+              <div class="catalog-item__old-price">4 750 руб.</div>
+              <div class="catalog-item__price">4 500 руб.</div>
+            </div>
+            <button class="button button_catalog">Купить</button>
+          </div>
+        </div>
+        <div class="catalog-item">
+          <div class="catalog-item__wrapper">
+            <div class="catalog-item__content catalog-item__content_active">
+              <img src="./img/slider/puls.png" alt="pulsometr" class="catalog-item__img">
+              <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+              <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+              <a href="#" class="catalog-item__link">Подробнее</a>
+            </div>
+            <ul class="catalog-item__list">
+              <li class="catalog-item__list_item">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+              <li class="catalog-item__list_item">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+              <li class="catalog-item__list_item">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+              <li class="catalog-item__list_item">Вы сможете посмотреть данные по 10 тренировкам.</li>
+              <a href="#" class="catalog-item__back">Назад</a>
+            </ul>
+          </div>
+          <hr>
+          <div class="catalog-item__footer">
+            <div class="catalog-item__prices">  
+              <div class="catalog-item__old-price">4 750 руб.</div>
+              <div class="catalog-item__price">4 500 руб.</div>
+            </div>
+            <button class="button button_catalog">Купить</button>
+          </div>
+        </div>
+        <div class="catalog-item">
+          <div class="catalog-item__wrapper">
+            <div class="catalog-item__content catalog-item__content_active">
+              <img src="./img/slider/puls.png" alt="pulsometr" class="catalog-item__img">
+              <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+              <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+              <a href="#" class="catalog-item__link">Подробнее</a>
+            </div>
+            <ul class="catalog-item__list">
+              <li class="catalog-item__list_item">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+              <li class="catalog-item__list_item">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+              <li class="catalog-item__list_item">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+              <li class="catalog-item__list_item">Вы сможете посмотреть данные по 10 тренировкам.</li>
+              <a href="#" class="catalog-item__back">Назад</a>
+            </ul>
+          </div>
+          <hr>
+          <div class="catalog-item__footer">
+            <div class="catalog-item__prices">  
+              <div class="catalog-item__old-price">4 750 руб.</div>
+              <div class="catalog-item__price">4 500 руб.</div>
+            </div>
+            <button class="button button_catalog">Купить</button>
+          </div>
+        </div>
+        <div class="catalog-item">
+          <div class="catalog-item__wrapper">
+            <div class="catalog-item__content catalog-item__content_active">
+              <img src="./img/slider/puls.png" alt="pulsometr" class="catalog-item__img">
+              <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+              <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+              <a href="#" class="catalog-item__link">Подробнее</a>
+            </div>
+            <ul class="catalog-item__list">
+              <li class="catalog-item__list_item">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+              <li class="catalog-item__list_item">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+              <li class="catalog-item__list_item">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+              <li class="catalog-item__list_item">Вы сможете посмотреть данные по 10 тренировкам.</li>
+              <a href="#" class="catalog-item__back">Назад</a>
+            </ul>
+          </div>
+          <hr>
+          <div class="catalog-item__footer">
+            <div class="catalog-item__prices">  
+              <div class="catalog-item__old-price">4 750 руб.</div>
+              <div class="catalog-item__price">4 500 руб.</div>
+            </div>
+            <button class="button button_catalog">Купить</button>
+          </div>
+        </div>
+        <div class="catalog-item">
+          <div class="catalog-item__wrapper">
+            <div class="catalog-item__content catalog-item__content_active">
+              <img src="./img/slider/puls.png" alt="pulsometr" class="catalog-item__img">
+              <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+              <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+              <a href="#" class="catalog-item__link">Подробнее</a>
+            </div>
+            <ul class="catalog-item__list">
+              <li class="catalog-item__list_item">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+              <li class="catalog-item__list_item">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+              <li class="catalog-item__list_item">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+              <li class="catalog-item__list_item">Вы сможете посмотреть данные по 10 тренировкам.</li>
+              <a href="#" class="catalog-item__back">Назад</a>
+            </ul>
           </div>
           <hr>
           <div class="catalog-item__footer">
@@ -151,11 +280,90 @@
           </div>
         </div>
       </div>
-      <div class="catalog__content"></div>
-      <div class="catalog__content"></div>
+      <div class="catalog__content">        
+        <div class="catalog-item">
+        <div class="catalog-item__wrapper">
+          <div class="catalog-item__content catalog-item__content_active">
+            <img src="./img/slider/puls.png" alt="pulsometr" class="catalog-item__img">
+            <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+            <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+            <a href="#" class="catalog-item__link">Подробнее</a>
+          </div>
+          <ul class="catalog-item__list">
+            <li class="catalog-item__list_item">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+            <li class="catalog-item__list_item">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+            <li class="catalog-item__list_item">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+            <li class="catalog-item__list_item">Вы сможете посмотреть данные по 10 тренировкам.</li>
+            <a href="#" class="catalog-item__back">Назад</a>
+          </ul>
+        </div>
+        <hr>
+        <div class="catalog-item__footer">
+          <div class="catalog-item__prices">  
+            <div class="catalog-item__old-price">4 750 руб.</div>
+            <div class="catalog-item__price">4 500 руб.</div>
+          </div>
+          <button class="button button_catalog">Купить</button>
+        </div>
+        </div>
+      </div>
+      <div class="catalog__content">
+        <div class="catalog-item">
+          <div class="catalog-item__wrapper">
+            <div class="catalog-item__content catalog-item__content_active">
+              <img src="./img/slider/puls.png" alt="pulsometr" class="catalog-item__img">
+              <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+              <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+              <a href="#" class="catalog-item__link">Подробнее</a>
+            </div>
+            <ul class="catalog-item__list">
+              <li class="catalog-item__list_item">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+              <li class="catalog-item__list_item">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+              <li class="catalog-item__list_item">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+              <li class="catalog-item__list_item">Вы сможете посмотреть данные по 10 тренировкам.</li>
+              <a href="#" class="catalog-item__back">Назад</a>
+            </ul>
+          </div>
+          <hr>
+          <div class="catalog-item__footer">
+            <div class="catalog-item__prices">  
+              <div class="catalog-item__old-price">4 750 руб.</div>
+              <div class="catalog-item__price">4 500 руб.</div>
+            </div>
+            <button class="button button_catalog">Купить</button>
+          </div>
+        </div>
+        <div class="catalog-item">
+          <div class="catalog-item__wrapper">
+            <div class="catalog-item__content catalog-item__content_active">
+              <img src="./img/slider/puls.png" alt="pulsometr" class="catalog-item__img">
+              <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+              <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+              <a href="#" class="catalog-item__link">Подробнее</a>
+            </div>
+            <ul class="catalog-item__list">
+              <li class="catalog-item__list_item">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+              <li class="catalog-item__list_item">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+              <li class="catalog-item__list_item">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+              <li class="catalog-item__list_item">Вы сможете посмотреть данные по 10 тренировкам.</li>
+              <a href="#" class="catalog-item__back">Назад</a>
+            </ul>
+          </div>
+          <hr>
+          <div class="catalog-item__footer">
+            <div class="catalog-item__prices">  
+              <div class="catalog-item__old-price">4 750 руб.</div>
+              <div class="catalog-item__price">4 500 руб.</div>
+            </div>
+            <button class="button button_catalog">Купить</button>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
   <script src="js/script.js"></script>
 </body>
