--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-  <div class="promo">
+  <section class="promo">
     <div class="logo__background "></div>
     <div class="container">
       <header class="header">
@@ -58,7 +58,7 @@
       
     </div>
     </div>
-  </div>
+  </section>
 
 <section class="advantages">
   <div class="container">
