--- a/src/index.html
+++ b/src/index.html
@@ -427,12 +427,13 @@
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.430481195995!2d37.6448073157547!3d55.76839498055748!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsIDQvMywg0JzQvtGB0LrQstCwLCAxMDcwNzg!5e0!3m2!1sru!2sru!4v1644478167572!5m2!1sru!2sru" width="100%" height="630" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
     <div class="footer__info">
-      <address class="footer__address">Москва, Мясницкий проезд, д.3с1</address>
+      <address class="footer__addr">Москва, Мясницкий проезд, д.3с1</address>
       <a href="tel:+74999228974" class="footer__phone">8 (499) 922-89-74</a>
-      <div class="footer__social"></div>
-      <a href="#" class="footer__social-item"><img src="./icons/facebook.svg" alt=""></a>
-      <a href="#" class="footer__social-item"><img src="./icons/instagram.svg" alt=""></a>
-      <a href="#" class="footer__social-item"><img src="./icons/pinterest.svg" alt=""></a>
+      <div class="footer__social">
+        <a href="#" class="footer__social-item"><img src="./icons/facebook.svg" alt=""></a>
+        <a href="#" class="footer__social-item"><img src="./icons/instagram.svg" alt=""></a>
+        <a href="#" class="footer__social-item"><img src="./icons/pinterest.svg" alt=""></a>
+      </div>
   </div>
 </footer>
 
