--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="header__contacts">
         <a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
-        <button class="button button__header">Заказать звонок</button>
+        <button data-modal="consultation" class="button button__header">Заказать звонок</button>
         </div>
       </header>
 
@@ -47,7 +47,7 @@
       </div>
 
       <div class="catalog">
-        <button class="button button_main">заказать консультацию</button>
+        <button data-modal="consultation" class="button button_main">заказать консультацию</button>
         <button class="button button_main xs-visible">Перейти в каталог</button>
 
         <div class="promo__link xs-hidden">
@@ -133,7 +133,7 @@
           <div class="catalog-item__wrapper">
             <div class="catalog-item__content catalog-item__content_active">
               <img src="./img/slider/puls.png" alt="pulsometr" class="catalog-item__img">
-              <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+              <div class="catalog-item__subtitle">Пульсометр Polar FW45</div>
               <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
               <a href="#" class="catalog-item__link">Подробнее</a>
             </div>
@@ -158,7 +158,7 @@
           <div class="catalog-item__wrapper">
             <div class="catalog-item__content catalog-item__content_active">
               <img src="./img/slider/puls.png" alt="pulsometr" class="catalog-item__img">
-              <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+              <div class="catalog-item__subtitle">Пульсометр Suunto MT-2</div>
               <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
               <a href="#" class="catalog-item__link">Подробнее</a>
             </div>
@@ -183,7 +183,7 @@
           <div class="catalog-item__wrapper">
             <div class="catalog-item__content catalog-item__content_active">
               <img src="./img/slider/puls.png" alt="pulsometr" class="catalog-item__img">
-              <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+              <div class="catalog-item__subtitle">Пульсометр Polar MF-21</div>
               <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
               <a href="#" class="catalog-item__link">Подробнее</a>
             </div>
@@ -208,7 +208,7 @@
           <div class="catalog-item__wrapper">
             <div class="catalog-item__content catalog-item__content_active">
               <img src="./img/slider/puls.png" alt="pulsometr" class="catalog-item__img">
-              <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+              <div class="catalog-item__subtitle">Пульсометр Suunto FT19</div>
               <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
               <a href="#" class="catalog-item__link">Подробнее</a>
             </div>
@@ -233,7 +233,7 @@
           <div class="catalog-item__wrapper">
             <div class="catalog-item__content catalog-item__content_active">
               <img src="./img/slider/puls.png" alt="pulsometr" class="catalog-item__img">
-              <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+              <div class="catalog-item__subtitle">Пульсометр Polar RW91</div>
               <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
               <a href="#" class="catalog-item__link">Подробнее</a>
             </div>
@@ -258,7 +258,7 @@
           <div class="catalog-item__wrapper">
             <div class="catalog-item__content catalog-item__content_active">
               <img src="./img/slider/puls.png" alt="pulsometr" class="catalog-item__img">
-              <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+              <div class="catalog-item__subtitle">Пульсометр Polar RT19</div>
               <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
               <a href="#" class="catalog-item__link">Подробнее</a>
             </div>
@@ -285,7 +285,7 @@
         <div class="catalog-item__wrapper">
           <div class="catalog-item__content catalog-item__content_active">
             <img src="./img/slider/puls.png" alt="pulsometr" class="catalog-item__img">
-            <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+            <div class="catalog-item__subtitle">Пульсометр Suunto FF3</div>
             <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
             <a href="#" class="catalog-item__link">Подробнее</a>
           </div>
@@ -312,7 +312,7 @@
           <div class="catalog-item__wrapper">
             <div class="catalog-item__content catalog-item__content_active">
               <img src="./img/slider/puls.png" alt="pulsometr" class="catalog-item__img">
-              <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+              <div class="catalog-item__subtitle">Пульсометр Polar FT3</div>
               <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
               <a href="#" class="catalog-item__link">Подробнее</a>
             </div>
@@ -424,9 +424,7 @@
 
 <footer class="footer">
   <div class="footer__map">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.430481195995!2d37.6448073157547!3d55.76839498055748!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsIDQvMywg0JzQvtGB0LrQstCwLCAxMDcwNzg!5e0!3m2!1sru!2sru!4v1644478167572!5m2!1sru!2sru" width="100%" height="630" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-    </div>
-    <div class="footer__info">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5011.4347347805015!2d37.64589769070891!3d55.76962518871194!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsIDQvMywg0JzQvtGB0LrQstCwLCAxMDcwNzg!5e0!3m2!1sru!2sru!4v1644750227535!5m2!1sru!2sru" width="100%" height="650" style="border:0;" allowfullscreen="" loading="lazy"></iframe>    <div class="footer__info">
       <address class="footer__addr">Москва, Мясницкий проезд, д.3с1</address>
       <a href="tel:+74999228974" class="footer__phone">8 (499) 922-89-74</a>
       <div class="footer__social">
@@ -436,6 +434,41 @@
       </div>
   </div>
 </footer>
+
+<div class="overlay">
+  <div class="modal" id="consultation">
+    <div class="modal__close">&times;</div>
+    <div class="modal__subtitle">Просто заполните форму заявки</div>
+    <div class="modal__descr">и мы перезвоним вам в течение 10 минут</div>
+    <form action="#" class="feed-form feed-form_mt25">
+      <input name="name" required placeholder="Ваше имя" type="text">
+      <input name="phone" required placeholder="Ваш телефон" type="number">
+      <input name="email" required placeholder="Ваш e-mail" type="email">
+      <button class="button button_submit">Заказать консультацию</button>
+    </form>
+  </div>
+
+  <div class="modal"  id="order">
+    <div class="modal__close">&times;</div>
+    <div class="modal__subtitle">Ваш заказ:</div>
+    <div class="modal__descr">Пульсометр Polar FT1</div>
+    <form action="#" class="feed-form feed-form_mt25">
+      <input name="name" required placeholder="Ваше имя" type="text">
+      <input name="phone" required placeholder="Ваш телефон" type="number">
+      <input name="email" required placeholder="Ваш e-mail" type="email">
+      <button class="button button_submit">Купить</button>
+    </form>
+  </div>
+
+
+  <div class="modal modal_mini"  id="thanks">
+    <div class="modal__close">&times;</div>
+    <div class="modal__subtitle">Спасибо за вашу заявку!</div>
+    <div class="modal__descr">Наш менеджер свяжется с вами в ближайшее время</div>
+  </div>
+
+
+</div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
