--- a/src/index.html
+++ b/src/index.html
@@ -98,10 +98,10 @@
         Просто заполните форму заявки <br>
         и мы перезвоним через 15 минут
       </div>
-      <form action="#" class="feed-form">
-        <input name="name" required placeholder="Ваше имя" type="text">
-        <input name="phone" required placeholder="Ваш телефон" type="number">
-        <input name="email" required placeholder="Ваш e-mail" type="email">
+      <form id="consultation-form" action="#" class="feed-form">
+        <input name="name" placeholder="Ваше имя" type="text">
+        <input name="phone" placeholder="Ваш телефон" type="number">
+        <input name="email" placeholder="Ваш e-mail" type="email">
         <button class="button button_submit">Заказать консультацию</button>
       </form>
     </div>
@@ -473,5 +473,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
   <script src="js/script.js"></script>
+  <script src="js/jquery.validate.min.js"></script>
 </body>
 </html>
