--- a/src/index.html
+++ b/src/index.html
@@ -100,7 +100,7 @@
       </div>
       <form id="consultation-form" action="#" class="feed-form">
         <input name="name" placeholder="Ваше имя" type="text">
-        <input name="phone" placeholder="Ваш телефон" type="number">
+        <input name="phone" placeholder="Ваш телефон">
         <input name="email" placeholder="Ваш e-mail" type="email">
         <button class="button button_submit">Заказать консультацию</button>
       </form>
@@ -442,7 +442,7 @@
     <div class="modal__descr">и мы перезвоним вам в течение 10 минут</div>
     <form action="#" class="feed-form feed-form_mt25">
       <input name="name" required placeholder="Ваше имя" type="text">
-      <input name="phone" required placeholder="Ваш телефон" type="number">
+      <input name="phone" required placeholder="Ваш телефон">
       <input name="email" required placeholder="Ваш e-mail" type="email">
       <button class="button button_submit">Заказать консультацию</button>
     </form>
@@ -454,7 +454,7 @@
     <div class="modal__descr">Пульсометр Polar FT1</div>
     <form action="#" class="feed-form feed-form_mt25">
       <input name="name" required placeholder="Ваше имя" type="text">
-      <input name="phone" required placeholder="Ваш телефон" type="number">
+      <input name="phone" required placeholder="Ваш телефон">
       <input name="email" required placeholder="Ваш e-mail" type="email">
       <button class="button button_submit">Купить</button>
     </form>
@@ -472,7 +472,8 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
-  <script src="js/script.js"></script>
   <script src="js/jquery.validate.min.js"></script>
+  <script src="js/jquery.mask.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
