--- a/src/index.html
+++ b/src/index.html
@@ -88,24 +88,25 @@
 </div>
 </section>
 
-  <section class="consultation">
-    <div class="container">
+<section class="consultation">
+  <div class="container">
       <h2 class="title title_left">
-        Получите бесплатную консультацию <br> по подбору пульсометра
+          Получите бесплатную консультацию<br>
+          по подбору пульсометра 
       </h2>
-
       <div class="consultation__descr">
-        Просто заполните форму заявки <br>
-        и мы перезвоним через 15 минут
+          Просто заполните форму заявки<br> 
+          и мы перезвоним вам в течении 10 минут
       </div>
-      <form id="consultation-form" action="#" class="feed-form">
-        <input name="name" placeholder="Ваше имя" type="text">
-        <input name="phone" placeholder="Ваш телефон">
-        <input name="email" placeholder="Ваш e-mail" type="email">
-        <button class="button button_submit">Заказать консультацию</button>
+      <form id="consultation-form" class="feed-form" action="">
+          <input name="name" required placeholder="Ваше имя" type="text"> 
+          <input name="phone" required placeholder="Ваш телефон"> 
+          <input name="email" required placeholder="Ваш E-mail" type="email"> 
+
+          <button class="button button_submit">заказать консультацию</button>
       </form>
-    </div>
-  </section>
+  </div>
+</section>
 
   <section class="carousel">
     <div class="container">
@@ -440,11 +441,11 @@
     <div class="modal__close">&times;</div>
     <div class="modal__subtitle">Просто заполните форму заявки</div>
     <div class="modal__descr">и мы перезвоним вам в течение 10 минут</div>
-    <form action="#" class="feed-form feed-form_mt25">
+    <form action="" class="feed-form feed-form_mt25">
       <input name="name" required placeholder="Ваше имя" type="text">
       <input name="phone" required placeholder="Ваш телефон">
       <input name="email" required placeholder="Ваш e-mail" type="email">
-      <button class="button button_submit">Заказать консультацию</button>
+      <button type="submit" class="button button_submit">Заказать консультацию</button>
     </form>
   </div>
 
@@ -452,7 +453,7 @@
     <div class="modal__close">&times;</div>
     <div class="modal__subtitle">Ваш заказ:</div>
     <div class="modal__descr">Пульсометр Polar FT1</div>
-    <form action="#" class="feed-form feed-form_mt25">
+    <form action="" class="feed-form feed-form_mt25">
       <input name="name" required placeholder="Ваше имя" type="text">
       <input name="phone" required placeholder="Ваш телефон">
       <input name="email" required placeholder="Ваш e-mail" type="email">
