--- a/src/index.html
+++ b/src/index.html
@@ -98,7 +98,7 @@
           Просто заполните форму заявки<br> 
           и мы перезвоним вам в течении 10 минут
       </div>
-      <form id="consultation-form" class="feed-form" action="">
+      <form id="consult" class="feed-form" action="#">
           <input name="name" required placeholder="Ваше имя" type="text"> 
           <input name="phone" required placeholder="Ваш телефон"> 
           <input name="email" required placeholder="Ваш E-mail" type="email"> 
