--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,7 @@
 </h2>
   <div class="consultation__descr">
   Просто заполните форму заявки<br> 
-  и мы перезвоним вам в течении 10 минут
+  и мы перезвоним вам в течение 10 минут
 </div>
 <form id="consult" class="feed-form" action="#">
   <input name="name" required placeholder="Ваше имя" type="text"> 
