--- a/src/index.html
+++ b/src/index.html
@@ -109,7 +109,7 @@
 <div class="carousel">
   <div class="container">
   <div class="carousel__inner">
-  <div><a href="https://vk.com/e.kort" target="_blank"><img src="./img/slider/1.png"  alt="slider"></a></div>
+  <div><a href="#" target="_blank"><img src="./img/slider/1.png"  alt="slider"></a></div>
   <div><img src="./img/slider/2.png" alt=""></div>
   <div><img src="./img/slider/3.png" alt=""></div>
 </div>
